--- a/client/package.json
+++ b/client/package.json
@@ -8,8 +8,9 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "^4.0.3",
-    "web3": "^1.7.5"
+    "react-hot-toast": "^2.4.1",
+    "react-scripts": "^5.0.1",
+    "web3": "^4.8.0"
   },
   "scripts": {
     "start": "react-scripts start",
